<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/skybluebck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.QrGenerator">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/qr_generate"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/qrgname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/event_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/qrdate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/dated_on"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/qrtime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/qrnofoper"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/no_of_person_allowed"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <Button
                android:id="@+id/generatebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/generate" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>