<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/skybluebck"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminLogin">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="32dp"
                android:text="@string/admin_login"
                android:textAlignment="center"
                android:textColor="#6200ED"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/adlgmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:drawableStart="@drawable/email_clip"
                android:drawablePadding="10dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:hint="@string/username_or_email"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/adlpass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:drawableStart="@drawable/password_clip"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <Button
                android:id="@+id/adminloginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="100dp"
                android:text="@string/login" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/gotouserlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/go_to_user_login"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>